# plugin-catalog

./: CONTRIBUTING.md  README.md  catalog.json
.github/workflows/: validate.yml
validator/: Cargo.toml
validator/src/: lib.rs  main.rs
validator/tests/: cli.rs  validate.rs
