[package]
name = "catalog-validator"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "catalog-check"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"